--- a/A/Altice/AlticeNovemberCreative/ads/OPT_1P_24(as low as)/300x250/300x250.html
+++ b/A/Altice/AlticeNovemberCreative/ads/OPT_1P_24(as low as)/300x250/300x250.html
@@ -90,7 +90,7 @@ amo.registerAttribute("frameText43","TEXT","&nbsp;");
 amo.registerAttribute("frameText51", "TEXT", "<div style='top:23px;left:20px;line-height:1.1;'><div style='font-size:20px;letter-spacing:-0.1px;'>Internet Starting at</div></div>");
 amo.registerAttribute("frameText52", "TEXT", "<div style='top:53px;left:20px;line-height:1.1;'><div style='color:#0084d6;font-size:60px;margin-top:-4px;margin-left: -3px;letter-spacing:-2.5px;'><sup style='font-size:60%;vertical-align:43%;'>$</sup>24<sup style='font-size:60%;vertical-align:43%;'>99</sup></div><div style='font-size:16px;letter-spacing:-0.1px;margin-top:-9px;margin-left:-1px;'>mo./1 yr.<div class='AlticeRegular' style='font-size:10px;margin-top:1px;'>plus taxes, fees & charges</div></div></div>");
 amo.registerAttribute("frameText53", "TEXT", "<div style='top:147px;left:20px;line-height:1.3;font-size:14px;letter-spacing:-0.1px;'><div><span style='color:#0084d6;padding-right:5px;'>+</span>No Annual Contract</div></div>");
-amo.registerAttribute("frameImage1", "TEXT", "firstIntroInternet.gif");
+amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Black.mp4");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -140,9 +140,9 @@ amo.registerAttribute("frameImage1", "TEXT", "firstIntroInternet.gif");
         style="transform-origin:bottom center;
         -webkit-transition:opacity ease-out 0.3s, transform ease-out 0.3s;
         transition:opacity ease-out 0.3s, transform ease-out 0.3s;
-        background-color:#ddd;
+        background-color:#000;
         opacity:1;">
-        <div id="frameImage1" class="asset"
+        <!-- <div id="frameImage1" class="asset"
           data-image="frameImage1"
           style="top:32px;
             left:50px;
@@ -150,6 +150,13 @@ amo.registerAttribute("frameImage1", "TEXT", "firstIntroInternet.gif");
             height:200px;
             -webkit-transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;
             transition:opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s;">
+        </div> -->
+        <div id="frameVideo1"
+          style="top:140px;
+            left:-6px;
+            width:312px;
+            height:60px;">
+            <video muted playsinline autoplay style="width:100%;"></video>
         </div>
         <!-- <div id="ref" class="asset"
           data-image="ref"
@@ -225,6 +232,7 @@ amo.registerAttribute("frameImage1", "TEXT", "firstIntroInternet.gif");
           ad.root.addEventListener("click", function(e) {
             if('button' in e.target.dataset) { } else { amo.onAdClick('clickUrl'); } //amo.onDynAdClick(adData.feedData, "CLICK", adClickUrl); }
           });
+          setTimeout(function(){ ad.layers.frameVideo1.querySelector('video').src = adData.frameVideo1; },800);
           var playOtherFrames = function(){
             setTimeout(function(){
               // ad.layers.frame1.style.webkitTransform = 'rotate(30deg) translate(50%,-50%)';
@@ -291,26 +299,34 @@ amo.registerAttribute("frameImage1", "TEXT", "firstIntroInternet.gif");
                 }, 3000);
             }, 10);
           }
-          var gifImagePath = ad.layers.frameImage1.querySelector('img').src;
-          ad.layers.frameImage1.querySelector('img').src = 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABBJREFUeNpi+P//PwNAgAEACPwC/tuiTRYAAAAASUVORK5CYII=';
-          setTimeout(function(){
-            ad.layers.frameImage1.querySelector('img').src = gifImagePath;
+          ad.layers.frameVideo1.querySelector('video').onplay = function(){
+            // ad.layers.cta.style.opacity = 1;
+          }
+          ad.layers.frameVideo1.querySelector('video').onended = function(){
             setTimeout(function(){
-              ad.layers.frameText1.style.webkitTransition = 'opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s';
-              ad.layers.frameText1.style.transition = 'opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s';
-              setTimeout(function(){
-                // ad.layers.frameImage1.style.opacity = 0;
-                // ad.layers.frameImage1.style.webkitTransform = 'translateX(50%)';
-                // ad.layers.frameImage1.style.transform = 'translateX(50%)';
-                // ad.layers.frameText1.style.opacity = 0;
-                // ad.layers.frameText1.style.webkitTransform = 'translateX(50%)';
-                // ad.layers.frameText1.style.transform = 'translateX(50%)';
-                setTimeout(function(){
-                  playOtherFrames();
-                }, 1000);
-              },100);
-            },2600);
-          }, 1000);
+                playOtherFrames();
+            },500);
+          }
+          // var gifImagePath = ad.layers.frameImage1.querySelector('img').src;
+          // ad.layers.frameImage1.querySelector('img').src = 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABBJREFUeNpi+P//PwNAgAEACPwC/tuiTRYAAAAASUVORK5CYII=';
+          // setTimeout(function(){
+          //   ad.layers.frameImage1.querySelector('img').src = gifImagePath;
+          //   setTimeout(function(){
+          //     ad.layers.frameText1.style.webkitTransition = 'opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s';
+          //     ad.layers.frameText1.style.transition = 'opacity ease-out 0.3s, transform cubic-bezier(.43,-0.25,.32,1.39) 0.5s';
+          //     setTimeout(function(){
+          //       // ad.layers.frameImage1.style.opacity = 0;
+          //       // ad.layers.frameImage1.style.webkitTransform = 'translateX(50%)';
+          //       // ad.layers.frameImage1.style.transform = 'translateX(50%)';
+          //       // ad.layers.frameText1.style.opacity = 0;
+          //       // ad.layers.frameText1.style.webkitTransform = 'translateX(50%)';
+          //       // ad.layers.frameText1.style.transform = 'translateX(50%)';
+          //       setTimeout(function(){
+          //         playOtherFrames();
+          //       }, 1000);
+          //     },100);
+          //   },2600);
+          // }, 1000);
         });
       }, 2000);
     </script>
