--- a/A/Altice/AlticeNovemberCreative/ads/SDL_1P_34_Gig/300x50/300x50.html
+++ b/A/Altice/AlticeNovemberCreative/ads/SDL_1P_34_Gig/300x50/300x50.html
@@ -82,13 +82,13 @@ amo.registerAttribute("frameImage2","IMAGE","300x50_OPT_AugPFL_ACQ_AO_Amz_64PFL_
 amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameImage4","IMAGE","1x1.png");
 amo.registerAttribute("frameText1","TEXT","<font style='color:#0084d6;'><div class='raise'><div class='raise_txt'>BL<span style='left:1px;'>A</span>CK FRIDAY</div></div><div class='raise'><div class='raise_txt'style='padding-top: 1px;padding-left: 0px;font-size: 65%;color:#fff;letter-spacing: 0px;'>Now - Dec 1<sup style='font-size: 60%;'>st</sup></div></font>");
-amo.registerAttribute("frameText21","TEXT","<div style='top: 2px;left: 60px;font-size: 13.2px;'>400 Mbps Internet</div>");
+amo.registerAttribute("frameText21","TEXT","<div style='top: 2px;left: 60px;font-size: 13.2px;'>Up to 100 Mbps Internet</div>");
 amo.registerAttribute("frameText22","TEXT","<div style='top: 20px;left: 60px;font-size:14px;letter-spacing: -0.2px;line-height: 1;color:#0084d6;'>$34.99 mo. for life</div>");
 amo.registerAttribute("frameText23","TEXT","<div style='top: 33px;left: 60px;font-size: 10px;letter-spacing: -0.1px;' class='AlticeRegular'>plus taxes, fees & charges</div>");
 amo.registerAttribute("frameText31", "TEXT", "<div style='top: 5px;left: 10px;line-height: 1.6;font-size: 13px;'><div style='color:#0084d6;'><span style='color:#0084d6;padding-right:3px;'>+</span>No Annual Contract</div></div>");
 amo.registerAttribute("frameText32", "TEXT", "<div style='top: 23px;left: 10px;line-height: 1.6;font-size: 13px;'><div><span style='color:#0084d6;padding-right:3px;'>+</span>30-Day Money-Back Guarantee</div></div>");
 amo.registerAttribute("frameText33", "TEXT", "&nbsp;");
-amo.registerAttribute("frameText41","TEXT","<div style='top: 2px;left: 12px;font-size: 13.2px;'>400 Mbps Internet</div>");
+amo.registerAttribute("frameText41","TEXT","<div style='top: 2px;left: 12px;font-size: 13.2px;'>Up to 100 Mbps Internet</div>");
 amo.registerAttribute("frameText42","TEXT","<div style='top: 20px;left: 12px;font-size:14px;letter-spacing: -0.2px;line-height: 1;color:#0084d6;'>$34.99 mo. for life</div>");
 amo.registerAttribute("frameText43","TEXT","<div style='top: 33px;left: 12px;font-size: 10px;letter-spacing: -0.1px;' class='AlticeRegular'>plus taxes, fees & charges<div style='color:#0084d6;position: absolute;top: -10px;left: 140px;width: 60px;line-height: 1.1;' class='AlticeBold'>No Annual<br>Contract</div></div>");
 amo.registerAttribute("frameVideo1", "TEXT", "cartIntroAnimation_Black.mp4");
